# MIT6.837-Curves-and-Surfaces

./: CMakeLists.txt  Make.sh  README.md
src/: Utils.cpp  Utils.h  camera.cpp  camera.h  curve.cpp  curve.h  main.cpp  parse.cpp  parse.h  surf.cpp  surf.h  vertexrecorder.cpp  vertexrecorder.h
src/shaders/: color.frag  light.frag  main.vert
vecmath/include/: Vector3f.h
